EPMRPP-38817. Fix icon overlapping in case of long value in filter field.

--- a/app/src/components/inputs/inputFilter/inputFilter.scss
+++ b/app/src/components/inputs/inputFilter/inputFilter.scss
@@ -101,7 +101,7 @@
 
 .input {
   flex-grow: 1;
-  padding: 6px 10px;
+  padding: 6px 65px 6px 10px;
   margin: 0;
   box-sizing: border-box;
   border: none;
